# capstone-project

./: .gitignore  LICENSE  README.md  backend.md  project_report.md  pyproject.toml  requirements.txt
backend/app/: health.py  main.py
backend/app/api/v1/: analyze.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/schemas/: github.py  request.py  response.py
backend/app/services/: diff_selector.py  github_service.py  llm_service.py  ml_service.py
backend/app/utils/: diff_utils.py  pr_parser.py
docs/: schemas.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/common/: ErrorMessage.jsx  LoadingSpinner.jsx
frontend/src/components/features/: PRAnalyzer.jsx  ResultsPanel.jsx  RiskVisualization.jsx  SkeletonLoader.jsx  index.js
frontend/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Progress.jsx  index.js
frontend/src/config/: constants.js
frontend/src/hooks/: useAnalyzePR.js
frontend/src/services/: api.js
frontend/src/utils/: validators.js
ml/: README.md
ml/apis/: llm.py  predict.py
ml/data/: data.py
ml/data/processed/: processed_data.csv
ml/models/: eda.ipynb  feature_columns.joblib  model.py
