
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "PyGithub",
    "pandas",
    "python-dotenv",
    "numpy",
    "fastapi[standard]",
    "uvicorn",
    "httpx",
    "ipykernel",
    "scikit-learn",
    "scikit-learn",
    "joblib",
    "google-genai>=1.63.0",
]
requires-python = ">=3.12"
